--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "fake-indexeddb": "^6.0.0",
     "ip": "^2.0.1",
+    "lru-cache": "^11.1.0",
     "mongoose": "^8.13.1",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
